--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ file.reference.log4j-1.2.17.jar=/Users/Hugo/Documents/tapps/TareasMark/lib/apach
 file.reference.logdigger-core-3.2.1.jar=/Users/Hugo/Documents/tapps/TareasMark/lib/logdigger-connector-3.2.1/logdigger-core-3.2.1.jar
 file.reference.logdigger-jdbc-3.2.1.jar=/Users/Hugo/Documents/tapps/TareasMark/lib/logdigger-connector-3.2.1/logdigger-jdbc-3.2.1.jar
 file.reference.mongo-java-driver-2.11.3.jar=/Library/Java/Extensions/mongo-java-driver-2.11.3.jar
+file.reference.mysql.jar=/Library/Java/Extensions/mysql.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -43,7 +44,8 @@ javac.classpath=\
     ${file.reference.logdigger-jdbc-3.2.1.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.mongo-java-driver-2.11.3.jar}:\
-    ${libs.jstl11.classpath}
+    ${libs.jstl11.classpath}:\
+    ${file.reference.mysql.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
